# oslgn

./: .gitignore  LICENSE  README.md  pyproject.toml  researchers.txt
experi/experi_00/: experi.py
paper/learning/ch1/: ex1.dvi  ex1.fdb_latexmk  ex1.fls  ex1.tex
paper/learning/ch2/: ex2.fdb_latexmk  ex2.fls  ex2.tex  exercise2.fdb_latexmk  exercise2.fls  exercise2.tex
paper/learning/ch3/: ex.fdb_latexmk  ex.fls  ex.tex  exer.fdb_latexmk  exer.fls  exer.tex
paper/learning/ch4/: ex.fdb_latexmk  ex.fls  ex.tex
paper/learning/ch5/: ex.aux  ex.fdb_latexmk  ex.fls  ex.tex
paper/learning/ch6/: ex.aux  ex.bbl  ex.blg  ex.fdb_latexmk  ex.fls  ex.tex  references.bib
paper/neurIPS2025/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
paper/neurIPS2025/appendix/: appendix.tex
paper/neurIPS2025/sections/: abstract.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  methodology.tex  related_work.tex
paper/neurIPS2025_2/: checklist.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
paper/neurIPS2025_2/appendix/: 00_oslgn_model.tex  01_depth_scaling.tex  02_symbolic_compression.tex
paper/neurIPS2025_2/figures/: oslgn_depth_logs.pkl
paper/neurIPS2025_2/figures/small_world/: oslgn_depth_logs (1).pkl
paper/neurIPS2025_2/sections/: 00_abstract.tex
paper/neurIPS2025_2/sections/00_introduction/: intro.tex
paper/neurIPS2025_2/sections/01_method/: 01_overview.tex  02_operand_selection.tex  03_operation_selection.tex
(+15 files in other folders)
