[tool.poetry]
name = "oslgn"
version = "0.1.0"
description = "OSLGN : Operand Selective Logic Gate Neural Network"
authors = ["Choi Soon Ho"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
